--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,15 +1,15 @@
 baseURL = "https://www.slasheight-netsec.com"
-title = "Hugo Zzo Theme"
+title = "slasheight-netsec a network security blog by Jacob Kollasch"
 theme = "zzo"
 
-defaultContentLanguage = "en"
-defaultContentLanguageInSubdir = true
-hasCJKLanguage = true
+defaultContentLanguage = ""
+defaultContentLanguageInSubdir = false
+hasCJKLanguage = false
 
 summaryLength = 70
 buildFuture = true
 
-copyright = "&copy;{year}, All Rights Reserved"
+#copyright = "&copy;{year}, All Rights Reserved"
 timeout = 10000
 enableEmoji = true
 paginate = 13
