--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -1,8 +1,8 @@
-[[main]]
-  identifier = "about"
-  name = "About"
-  url = "about"
-  weight = 1
+#[[main]]
+#  identifier = "about"
+#  name = "About"
+#  url = "about"
+#  weight = 1
 
 # [[main]]
 #  identifier = "archive"
