changes to site

--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -36,13 +36,20 @@
   identifier = "projects"
   name = "Projects"
   url = "projects"
-  weight = 2
+  weight = 1
 
 [[main]]
   identifier = "knowledge-base"
   name = "Knowledge Base"
   url = "knowledge-base"
-  weight = 7
+  weight = 2
+
+[[main]]
+  identifier = "gallery"
+  name = "LetsDefend Writeups"
+  url = "lets-defend-writeups"
+  weight = 3
+    
 
 #[[main]]
 #  identifier = "publication"
