--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -28,7 +28,7 @@ homeHeaderType = "text" # text, img, slide, typewriter
 hideHomeHeaderWhenMobile = false
 
 # menu
-showMobileMenuTerms = ["tags", "categories"]
+#showMobileMenuTerms = ["tags", "categories"]
 
 # search
 enableSearch = true
