updates to site

--- a/config/_default/languages.toml
+++ b/config/_default/languages.toml
@@ -1,5 +1,5 @@
 [en]
-  title = "/8-NetSec Blog by Jacob Kollasch"
+  title = "CyberSecurity Blog by Jacob Kollasch"
   languageName = "English"
   weight = 1
   languagedir = "ltr"
