updates to site

--- a/config/_default/languages.toml
+++ b/config/_default/languages.toml
@@ -1,6 +1,6 @@
 [en]
-  title = "CyberSecurity Blog by Jacob Kollasch"
+  title = "Cybersecurity Blog by Jacob Kollasch"
   languageName = "English"
-  weight = 1
+  weight = 2
   languagedir = "ltr"
   contentdir = "content/en"
