--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,5 +1,5 @@
 baseURL = "https://www.jacobkollasch.com"
-title = "CyberSecurity Blog by Jacob Kollasch"
+title = "Cybersecurity Blog by Jacob Kollasch"
 theme = "zzo"
 
 defaultContentLanguage = ""
