--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -1,6 +1,6 @@
 logoText = "Home"
 logoType = "short" # long, short
-description = "CyberSecurity Blog by Jacob Kollasch"
+description = "Cybersecurity Blog by Jacob Kollasch"
 custom_css = []
 custom_js = []
 useFaviconGenerator = false # https://www.favicon-generator.org/
